--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
-    <meta name="twitter:title" content="Gauarva - TailwindCSS Personal Portfolio Template" />
+    <meta name="twitter:title" content="Gauarva - International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     <meta name="twitter:image" content="./images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:description" content="TailwindCSS Personal Portfolio Template" />
+    <meta name="twitter:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
     
@@ -33,7 +33,7 @@
           <!-- logo -->
           <div class="hideOnScroll lg:[&.scrolled]:opacity-0 lg:[&.scrolled]:-translate-x-8 w-1/4 transition-all duration-300">
             <a class="inline-block align-middle" href="./index.html">
-              <img alt="Gauarva" width="80" height="29" src="./images/logo.svg" />
+              <img alt="Gauarva"  src="./images/logo.svg" />
             </a>
           </div>
 
@@ -42,7 +42,7 @@
             <span class="indicator"></span>
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
-            <a href="./project.html">Project</a>
+            <a href="./platforms.html">Platforms</a>
             <a href="./blog.html">Blog</a>
             <a class="active" href="./contact.html">Contact</a>
           </nav>
@@ -331,45 +331,45 @@
           <div class="animated-line animated-line-one mb-5">
             <div class="line-block">
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
             </div>
             <div class="line-block-copy">
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
             </div>
@@ -378,45 +378,45 @@
           <div class="animated-line animated-line-two">
             <div class="line-block">
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
             </div>
             <div class="line-block-copy">
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let's make something</span>
+                <span class="cta-text">Let's Redefine Education</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
             </div>
@@ -442,9 +442,7 @@
           <div class="md:col-6 text-center md:text-right mb-4">
             <!-- Footer Menu -->
             <ul class="inline-flex flex-wrap justify-center md:justify-end gap-x-6">
-              <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="./index-2.html" class="link">Home v2</a>
-              </li>
+
               <li class="inline-block hover:opacity-75 transition-op duration-300">
                 <a href="./privacy.html" class="link">Privacy policy</a>
               </li>
@@ -452,11 +450,11 @@
           </div>
           <!-- Copyright -->
           <div class="md:col-6 text-center md:text-left mb-4 md:mb-0">
-            <p class="text-white/75">© 2023 Gaurava Yadav. All rights reserved.</p>
+            <p class="text-white/75">© 2025 Gauarva Yadav. All rights reserved.</p>
           </div>
           <!-- Developer Info -->
           <div class="md:col-6 text-center md:text-right">
-            <p class="text-white/75">Developed by <a class="link text-white" href="https://themeforest.net/user/platol/portfolio" target="_blank" rel="noopener noreferrer">Platol</a>
+            <p class="text-white/75">Developed by <a class="link text-white" href="https://endeavourdigital.in/" target="_blank" rel="noopener noreferrer">Endeavour Digital</a>
             </p>
           </div>
         </div>
