--- a/about.html
+++ b/about.html
@@ -9,12 +9,11 @@
     <meta name="description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     <meta property="og:title" content="About - Gaurava Yadav | International Award-Winning Entrepreneur" />
     <meta property="og:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
-    <meta property="og:image" content="./images/ogimage.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image" content="images/ogimage.png" />
+
 
     <meta name="twitter:title" content="Gauarva - International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
-    <meta name="twitter:image" content="./images/ogimage.png" />
+    <meta name="twitter:image" content="images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     
@@ -125,100 +124,10 @@
       <!-- ================= start of about ================= -->
       <section class="py-28 bg-white text-dark">
         <div class="container">
-          <div class="row justify-center items-center">
+          <div class="row justify-center">
             <div class="lg:col-4 md:col-6 col-10 mb-16 lg:mb-0" data-aos="fade-up-sm">
               <!-- about images -->
               <div class="about-images relative mx-8 z-10 cursor-pointer hover:scale-105 transition-transform ease-out duration-300">
-                <div class="transition-transform relative z-0">
-                  <img 
-                    loading="lazy" 
-                    width="500" 
-                    height="607"
-                    class="rounded-lg bg-light/10"
-                    alt="Image" 
-                    src="./images/about_me.png" 
-                  />
-                </div>
-                <div class="transition-transform absolute top-0 left-0">
-                  <img 
-                    loading="lazy" 
-                    width="500" 
-                    height="607"
-                    class="rounded-lg bg-light/10"
-                    alt="Image" 
-                    src="./images/about/02.jpg" 
-                  />
-                </div>
-                <div class="transition-transform absolute top-0 left-0">
-                  <img 
-                    loading="lazy" 
-                    width="500" 
-                    height="607"
-                    class="rounded-lg bg-light/10"
-                    alt="Image" 
-                    src="./images/about/03.jpg" 
-                  />
-                </div>
-                <div class="transition-transform absolute top-0 left-0">
-                  <img 
-                    loading="lazy" 
-                    width="500" 
-                    height="607"
-                    class="rounded-lg bg-light/10"
-                    alt="Image" 
-                    src="./images/about/10.jpg" 
-                  />
-                </div>
-                <div class="transition-transform absolute top-0 left-0">
-                  <img 
-                    loading="lazy" 
-                    width="500" 
-                    height="607"
-                    class="rounded-lg bg-light/10"
-                    alt="Image" 
-                    src="./images/about/05.jpg" 
-                  />
-                </div>
-                <div class="transition-transform absolute top-0 left-0">
-                  <img 
-                    loading="lazy" 
-                    width="500" 
-                    height="607"
-                    class="rounded-lg bg-light/10"
-                    alt="Image" 
-                    src="./images/about/06.jpg" 
-                  />
-                </div>
-                <div class="transition-transform absolute top-0 left-0">
-                  <img 
-                    loading="lazy" 
-                    width="500" 
-                    height="607"
-                    class="rounded-lg bg-light/10"
-                    alt="Image" 
-                    src="./images/about/07.jpg" 
-                  />
-                </div>
-                <div class="transition-transform absolute top-0 left-0">
-                  <img 
-                    loading="lazy" 
-                    width="500" 
-                    height="607"
-                    class="rounded-lg bg-light/10"
-                    alt="Image" 
-                    src="./images/about/08.jpg" 
-                  />
-                </div>
-                <div class="transition-transform absolute top-0 left-0">
-                  <img 
-                    loading="lazy" 
-                    width="500" 
-                    height="607"
-                    class="rounded-lg bg-light/10"
-                    alt="Image" 
-                    src="./images/about/09.jpg" 
-                  />
-                </div>
                 <div class="transition-transform absolute top-0 left-0">
                   <img 
                     loading="lazy" 
@@ -314,7 +223,7 @@
       <!-- ================= end of brands ================= -->
 
       <!-- ================= start of services ================= -->
-      <section class="py-28">
+      <section class="py-5">
         <div class="container">
           <div class="row mb-16 items-end">
             <div class="sm:col-8 order-2 sm:order-1">
