--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <meta name="description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     <meta property="og:title" content="Gaurava Yadav - International Award-Winning Entrepreneur & Founder, IPN FORUM" />
     <meta property="og:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
-    <meta property="og:image" content="./images/ogimage.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image" content="images/ogimage.png" />
+
 
     <meta name="twitter:title" content="Gauarva - International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
-    <meta name="twitter:image" content="./images/ogimage.png" />
+    <meta name="twitter:image" content="images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     
@@ -153,6 +152,7 @@
       </section>
       <!-- ================= end of banner ================= -->
 
+     
       <!-- ================= start of brands ================= -->
       <section class="pt-28 lg:pb-10 overflow-hidden">
         <div class="container">
@@ -187,6 +187,132 @@
         </div>
       </section>
       <!-- ================= end of brands ================= -->
+             <!-- ================= start of about ================= -->
+      <section class="py-5">
+        <div class="container">
+          <div class="col-12 mb-10">
+            <!-- Section Title -->
+            <h2 class="text-3xl font-secondary font-medium text-center" data-aos="fade">About Gauarva Yadav</h2>
+          </div>
+          <div class="row justify-center items-center">
+            <div class="lg:col-4 md:col-6 col-10 mb-16 lg:mb-0" data-aos="fade-up-sm">
+              <!-- about images -->
+              <div class="about-images relative mx-8 z-10 cursor-pointer hover:scale-105 transition-transform ease-out duration-300">
+                <div class="transition-transform relative z-0">
+                  <img 
+                    loading="lazy" 
+                    width="500" 
+                    height="607"
+                    class="rounded-lg bg-light/10"
+                    alt="Image" 
+                    src="./images/home/1.png" 
+                  />
+                </div>
+                <div class="transition-transform absolute top-0 left-0">
+                  <img 
+                    loading="lazy" 
+                    width="500" 
+                    height="607"
+                    class="rounded-lg bg-light/10"
+                    alt="Image" 
+                    src="./images/home/2.png" 
+                  />
+                </div>
+                <div class="transition-transform absolute top-0 left-0">
+                  <img 
+                    loading="lazy" 
+                    width="500" 
+                    height="607"
+                    class="rounded-lg bg-light/10"
+                    alt="Image" 
+                    src="./images/home/3.png" 
+                  />
+                </div>
+                <div class="transition-transform absolute top-0 left-0">
+                  <img 
+                    loading="lazy" 
+                    width="500" 
+                    height="607"
+                    class="rounded-lg bg-light/10"
+                    alt="Image" 
+                    src="./images/home/4.png" 
+                  />
+                </div>
+                <div class="transition-transform absolute top-0 left-0">
+                  <img 
+                    loading="lazy" 
+                    width="500" 
+                    height="607"
+                    class="rounded-lg bg-light/10"
+                    alt="Image" 
+                    src="./images/home/5.png" 
+                  />
+                </div>
+                <div class="transition-transform absolute top-0 left-0">
+                  <img 
+                    loading="lazy" 
+                    width="500" 
+                    height="607"
+                    class="rounded-lg bg-light/10"
+                    alt="Image" 
+                    src="./images/home/6.png" 
+                  />
+                </div>
+                <div class="transition-transform absolute top-0 left-0">
+                  <img 
+                    loading="lazy" 
+                    width="500" 
+                    height="607"
+                    class="rounded-lg bg-light/10"
+                    alt="Image" 
+                    src="./images/home/7.png" 
+                  />
+                </div>
+                <div class="transition-transform absolute top-0 left-0">
+                  <img 
+                    loading="lazy" 
+                    width="500" 
+                    height="607"
+                    class="rounded-lg bg-light/10"
+                    alt="Image" 
+                    src="./images/home/8.png" 
+                  />
+                </div>
+                <div class="transition-transform absolute top-0 left-0">
+                  <img 
+                    loading="lazy" 
+                    width="500" 
+                    height="607"
+                    class="rounded-lg bg-light/10"
+                    alt="Image" 
+                    src="./images/home/9.png" 
+                  />
+                </div>
+
+              </div>
+            </div>
+            <div class="lg:col-5 md:col-10 text-center lg:text-left" data-aos="fade-up-sm" data-aos-delay="100">
+              <div class="pl-0 lg:pl-8 flex flex-col">
+                <!-- about me -->
+                <div class="order-2 lg:order-1 mb-0 lg:mb-10 mt-10 lg:mt-0">
+                  <p class="text-lg sm:text-2xl leading-snug mb-4">An International Award-winning entrepreneur, founder of Indian Principals' Network (IPN), and passionate quizmaster dedicated to transforming the educational landscape across India and beyond.</p>
+                  <div class="text-white/75 md:text-lg">With extensive experience empowering over 15,000 school leaders and 500,000 teachers, Gaurava's vision drives innovation in education. His entrepreneurial journey spans multiple successful ventures including EduAce Services, fostering collaboration and excellence in the educational ecosystem.</div>
+                </div>
+                <div class="order-1 lg:order-2">
+                  <!-- rotate images button -->
+                  <button class="button button-sm button-dark swap-images-btn" onclick="window.location.href='about.html'">
+                    <span>
+                      <svg class="inline align-bottom mr-2 transition-transform ease-out duration-1000" width="16" height="16" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18.3332 10.0003C18.3332 14.6027 14.6022 18.3337 9.99984 18.3337C5.39746 18.3337 2.49984 13.7503 2.49984 13.7503M1.6665 10.0003C1.6665 5.39795 5.37021 1.66699 9.99984 1.66699C15.5554 1.66699 18.3332 6.25033 18.3332 6.25033M18.3332 6.25033V3.33366M18.3332 6.25033H15.4165M2.49984 13.7503H5.4165M2.49984 13.7503V16.667" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                      </svg>Know More About Gaurava</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ================= end of about ================= -->
 
       <!-- ================= start of recent-works ================= -->
       <section class="py-28">
@@ -705,7 +831,7 @@
 
           <!-- View All Videos Button -->
           <div class="text-center mt-16">
-            <a href="https://www.youtube.com/@IPNfoundation" target="_blank" rel="noopener noreferrer" class="button group relative overflow-hidden">
+            <a href="https://www.youtube.com/@IPNAcademy" target="_blank" rel="noopener noreferrer" class="button group relative overflow-hidden">
               <span class="relative z-10">View All Videos</span>
               <span class="absolute inset-0 bg-primary/30 transform scale-x-0 origin-left transition-transform duration-300 group-hover:scale-x-100"></span>
             </a>
@@ -721,7 +847,7 @@
             <div class="sm:col-8 order-2 sm:order-1">
               <!-- Section Title -->
               <h2 class="text-black text-4xl lg:text-5xl font-secondary font-medium -mt-[6px] text-center sm:text-left">
-                My weekly thoughts
+                My thoughts & reflections 
               </h2>
             </div>
             <div class="sm:col-4 order-1 sm:order-2 block mb-4 sm:mb-0 text-center sm:text-right">
@@ -736,17 +862,17 @@
               <article class="relative group text-center">
                 <div class="relative overflow-hidden rounded-lg mb-8">
                   <!-- Blog Post Image -->
-                  <img alt="You have no idea how much better you can feel!" loading="lazy" width="620" height="500" class="duration-700 group-hover:scale-110 group-hover:-rotate-1 object-cover w-full rounded-lg group-hover:brightness-75 bg-light/20" src="./images/blog/01.jpg" />
+                  <img alt="You have no idea how much better you can feel!" loading="lazy" width="620" height="500" class="duration-700 group-hover:scale-110 group-hover:-rotate-1 object-cover w-full rounded-lg group-hover:brightness-75 bg-light/20" src="./images/blog/1.png" />
                 </div>
                 <div class="px-2 sm:px-6 transition-all duration-500 group-hover:opacity-60">
                   <!-- Blog Post Tags and Date -->
                   <div class="flex flex-wrap items-center justify-center mb-4 space-x-5">
-                    <span class="inline-block text-sm rounded-full bg-[#efefef] px-3 py-1 capitalize">lifestyle</span>
-                    <span class="opacity-75 text-sm">25 May / 2023</span>
+                    <span class="inline-block text-sm rounded-full bg-[#efefef] px-3 py-1 capitalize">artificial intelligence</span>
+                    <span class="opacity-75 text-sm">12 June / 2024</span>
                   </div>
                   <!-- Blog Post Title -->
                   <h3 class="text-xl md:text-2xl leading-tight">
-                    <a class="stretched-link" href="./blog-single.html">You have no idea how much better you can feel!</a>
+                    <a class="stretched-link" href="./blog-ai-education.html">The Future of AI in Education: Transforming How We Learn and Teach</a>
                   </h3>
                 </div>
               </article>
@@ -757,17 +883,17 @@
               <article class="relative group text-center">
                 <div class="relative overflow-hidden rounded-lg mb-8">
                   <!-- Blog Post Image -->
-                  <img alt="The Role of a Developer in Creating Communities" loading="lazy" width="620" height="500" class="duration-700 group-hover:scale-110 group-hover:-rotate-1 object-cover w-full rounded-lg group-hover:brightness-75 bg-light/20" src="./images/blog/09.jpg" />
+                  <img alt="The Role of a Developer in Creating Communities" loading="lazy" width="620" height="500" class="duration-700 group-hover:scale-110 group-hover:-rotate-1 object-cover w-full rounded-lg group-hover:brightness-75 bg-light/20" src="./images/blog/2.png" />
                 </div>
                 <div class="px-2 sm:px-6 transition-all duration-500 group-hover:opacity-60">
                   <!-- Blog Post Tags and Date -->
                   <div class="flex flex-wrap items-center justify-center mb-4 space-x-5">
-                    <span class="inline-block text-sm rounded-full bg-[#efefef] px-3 py-1 capitalize">post elements</span>
-                    <span class="opacity-75 text-sm">23 May / 2023</span>
+                    <span class="inline-block text-sm rounded-full bg-[#efefef] px-3 py-1 capitalize">educational leadership</span>
+                    <span class="opacity-75 text-sm">05 June / 2025</span>
                   </div>
                   <!-- Blog Post Title -->
                   <h3 class="text-xl md:text-2xl leading-tight">
-                    <a class="stretched-link" href="./blog-single.html">The Role of a Developer in Creating Communities</a>
+                    <a class="stretched-link" href="./blog-leadership.html">Educational Leadership for the 21st Century</a>
                   </h3>
                 </div>
               </article>
@@ -778,17 +904,17 @@
               <article class="relative group text-center">
                 <div class="relative overflow-hidden rounded-lg mb-8">
                   <!-- Blog Post Image -->
-                  <img alt="Ways to improve usability and accessibility" loading="lazy" width="620" height="500" class="duration-700 group-hover:scale-110 group-hover:-rotate-1 object-cover w-full rounded-lg group-hover:brightness-75 bg-light/20" src="./images/blog/12.jpg" />
+                  <img alt="Ways to improve usability and accessibility" loading="lazy" width="620" height="500" class="duration-700 group-hover:scale-110 group-hover:-rotate-1 object-cover w-full rounded-lg group-hover:brightness-75 bg-light/20" src="./images/blog/3.png" />
                 </div>
                 <div class="px-2 sm:px-6 transition-all duration-500 group-hover:opacity-60">
                   <!-- Blog Post Tags and Date -->
                   <div class="flex flex-wrap items-center justify-center mb-4 space-x-5">
-                    <span class="inline-block text-sm rounded-full bg-[#efefef] px-3 py-1 capitalize">tech</span>
-                    <span class="opacity-75 text-sm">13 May / 2023</span>
+                    <span class="inline-block text-sm rounded-full bg-[#efefef] px-3 py-1 capitalize">quizzing</span>
+                    <span class="opacity-75 text-sm">29 May / 2024</span>
                   </div>
                   <!-- Blog Post Title -->
                   <h3 class="text-xl md:text-2xl leading-tight">
-                    <a class="stretched-link" href="./blog-single.html">Ways to improve usability and accessibility</a>
+                    <a class="stretched-link" href="./blog-quizzing.html">The Power of Quizzing in Education</a>
                   </h3>
                 </div>
               </article>
