--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,11 @@
     <meta name="description" content="Get in touch with Gaurava Yadav - International Award-Winning Entrepreneur & Founder of IPN FORUM" />
     <meta property="og:title" content="Contact - Gaurava Yadav | International Award-Winning Entrepreneur" />
     <meta property="og:description" content="Get in touch with Gaurava Yadav - International Award-Winning Entrepreneur & Founder of IPN FORUM" />
-    <meta property="og:image" content="./images/ogimage.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image" content="images/ogimage.png" />
+
 
     <meta name="twitter:title" content="Gauarva - International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
-    <meta name="twitter:image" content="./images/ogimage.png" />
+    <meta name="twitter:image" content="images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     
@@ -88,7 +87,7 @@
       <!-- ================= start of page-header ================= -->
       <section class="banner bg-white">
         <div class="pt-20 pb-24 page-banner bg-dark rounded-b-2xl relative z-10 overflow-hidden">
-          <div class="absolute inset-0 bg-gradient-to-r from-purple-900/20 to-blue-900/20 z-0"></div>
+          <div class="absolute inset-0 bg-gradient-to-r  z-0"></div>
           <div class="container relative z-10">
             <div class="row items-end" data-aos="fade">
               <div class="sm:col-8 text-center sm:text-left">
@@ -169,7 +168,7 @@
                 <div class="relative w-full h-[250px] rounded-lg overflow-hidden bg-gray-200">
                   <!-- Placeholder for a map or image -->
                   <div class="absolute inset-0 flex items-center justify-center">
-                    <img src="./images/world-map.png" alt="Global Impact Map" class="w-full h-full object-cover" onerror="this.style.display='none'; this.parentNode.innerHTML = '<div class=\'flex items-center justify-center h-full\'>World Map Image Placeholder</div>'">
+                    <img src="./images/world_map.png" alt="Global Impact Map" class="w-full h-full object-cover" onerror="this.style.display='none'; this.parentNode.innerHTML = '<div class=\'flex items-center justify-center h-full\'>World Map Image Placeholder</div>'">
                   </div>
                 </div>
               </div>
@@ -285,7 +284,7 @@
               </div>
               
               <!-- Map or additional content -->
-              <div class="p-8 bg-gray-50 rounded-2xl shadow-sm">
+              <div class="p-8 mt-10 bg-gray-50 rounded-2xl shadow-sm">
                 <h3 class="text-xl font-medium mb-6">Contact Information</h3>
                 <ul class="space-y-6">
                   <li class="flex items-center gap-3">
