--- a/privacy.html
+++ b/privacy.html
@@ -9,12 +9,11 @@
     <meta name="description" content="Privacy policy for Gaurava Yadav - International Award-Winning Entrepreneur and Founder of IPN FORUM" />
     <meta property="og:title" content="Privacy Policy - Gaurava Yadav | International Award-Winning Entrepreneur" />
     <meta property="og:description" content="Privacy policy for Gaurava Yadav - International Award-Winning Entrepreneur and Founder of IPN FORUM" />
-    <meta property="og:image" content="./images/ogimage.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image" content="images/ogimage.png" />
+
 
     <meta name="twitter:title" content="Gauarva - International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
-    <meta name="twitter:image" content="./images/ogimage.png" />
+    <meta name="twitter:image" content="images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     
