--- a/about.html
+++ b/about.html
@@ -128,12 +128,12 @@
             <div class="lg:col-4 md:col-6 col-10 mb-16 lg:mb-0" data-aos="fade-up-sm">
               <!-- about images -->
               <div class="about-images relative mx-8 z-10 cursor-pointer hover:scale-105 transition-transform ease-out duration-300">
-                <div class="transition-transform absolute top-0 left-0">
+                <div class="relative">
                   <img 
                     loading="lazy" 
                     width="500" 
                     height="607"
-                    class="rounded-lg bg-light/10"
+                    class="rounded-lg bg-light/10 w-full"
                     alt="Image" 
                     src="./images/about_me.png" 
                   />
