--- a/platforms.html
+++ b/platforms.html
@@ -128,7 +128,7 @@
               <!-- IPN FORUM -->
               <div class="group" data-aos="fade-up-sm">
                 <div class="overflow-hidden rounded-lg">
-                  <a href="https://ipnfoundation.org" class="block">
+                  <a href="project-ipn.html" class="block">
                     <img 
                       loading="lazy" 
                       width="600" 
@@ -141,7 +141,7 @@
                 </div>
                 <div class="mt-6">
                   <h3 class="text-2xl font-medium mb-2">
-                    <a href="https://ipnfoundation.org" class="link">IPN FORUM</a>
+                    <a href="project-ipn.html" class="link">IPN FORUM</a>
                   </h3>
                   <p class="">India's largest knowledge network of school leaders, empowering over 15,000 principals and 500,000+ teachers across 55+ countries.</p>
                 </div>
@@ -150,7 +150,7 @@
               <!-- EduAce Services -->
               <div class="group" data-aos="fade-up-sm" data-aos-delay="50">
                 <div class="overflow-hidden rounded-lg">
-                  <a href="https://eduace.in" class="block">
+                  <a href="https://ipnacademy.in" class="block">
                     <img 
                       loading="lazy" 
                       width="600" 
@@ -172,7 +172,7 @@
               <!-- IPN Academy -->
               <div class="group" data-aos="fade-up-sm" data-aos-delay="100">
                 <div class="overflow-hidden rounded-lg">
-                  <a href="https://ipnacademy.in" class="block">
+                  <a href="https://magicofskills.in" class="block">
                     <img 
                       loading="lazy" 
                       width="600" 
@@ -194,7 +194,7 @@
               <!-- Magic of Skills -->
               <div class="group" data-aos="fade-up-sm" data-aos-delay="150">
                 <div class="overflow-hidden rounded-lg">
-                  <a href="https://magicofskills.com" class="block">
+                  <a href="https://campuscoach.com" class="block">
                     <img 
                       loading="lazy" 
                       width="600" 
