--- a/blog-ai-education.html
+++ b/blog-ai-education.html
@@ -9,11 +9,11 @@
     <meta name="description" content="Exploring how AI is transforming education and what it means for students, teachers, and school leaders" />
     <meta property="og:title" content="The Future of AI in Education - Gaurava Yadav" />
     <meta property="og:description" content="Exploring how AI is transforming education and what it means for students, teachers, and school leaders" />
-    <meta property="og:image" content="images/ogimage.png" />
+    <meta property="og:image" content="https://gauravayadav.com/images/ogimage.png" />
 
 
     <meta name="twitter:title" content="The Future of AI in Education - Gaurava Yadav" />
-    <meta name="twitter:image" content="images/ogimage.png" />
+    <meta name="twitter:image" content="https://gauravayadav.com/images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Exploring how AI is transforming education and what it means for students, teachers, and school leaders" />
     
