--- a/blog-leadership.html
+++ b/blog-leadership.html
@@ -9,11 +9,11 @@
     <meta name="description" content="Transforming education through effective leadership in a rapidly changing world" />
     <meta property="og:title" content="Educational Leadership for the 21st Century - Gaurava Yadav" />
     <meta property="og:description" content="Transforming education through effective leadership in a rapidly changing world" />
-    <meta property="og:image" content="images/ogimage.png" />
+    <meta property="og:image" content="https://gauravayadav.com/images/ogimage.png" />
 
 
     <meta name="twitter:title" content="Educational Leadership for the 21st Century - Gaurava Yadav" />
-    <meta name="twitter:image" content="images/ogimage.png" />
+    <meta name="twitter:image" content="https://gauravayadav.com/images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Transforming education through effective leadership in a rapidly changing world" />
     
