--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,11 @@
     <meta name="description" content="Get in touch with Gaurava Yadav - International Award-Winning Entrepreneur & Founder of IPN FORUM" />
     <meta property="og:title" content="Contact - Gaurava Yadav | International Award-Winning Entrepreneur" />
     <meta property="og:description" content="Get in touch with Gaurava Yadav - International Award-Winning Entrepreneur & Founder of IPN FORUM" />
-    <meta property="og:image" content="images/ogimage.png" />
+    <meta property="og:image" content="https://gauravayadav.com/images/ogimage.png" />
 
 
     <meta name="twitter:title" content="Gauarva - International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
-    <meta name="twitter:image" content="images/ogimage.png" />
+    <meta name="twitter:image" content="https://gauravayadav.com/images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     
@@ -137,7 +137,7 @@
                 <p class="text-black/75">Reach out to connect about educational initiatives, speaking engagements, or collaborations with Gaurava Yadav.</p>
               
                 <!-- contact form -->
-                <form class="contact-form mt-8" method="POST">
+                <form class="contact-form mt-8" id="contactForm">
                   <div class="mb-6">
                     <label for="full_name" class="block mb-2 text-sm font-medium text-black">Name</label>
                     <input type="text" id="full_name" name="full_name" placeholder="Gaurava Yadav" class="border border-light/90 rounded-lg bg-white h-12 w-full px-4 py-4 focus:border-dark/50 outline-none focus-visible:outline-none focus-visible:shadow-none transition-all duration-300" required="" />
@@ -147,7 +147,7 @@
                     <input type="email" id="email" name="email" placeholder="yourname@email.app" class="border border-light/90 rounded-lg bg-white h-12 w-full px-4 py-4 focus:border-dark/50 outline-none focus-visible:outline-none focus-visible:shadow-none transition-all duration-300" required="" />
                   </div>
                   <div class="mb-6">
-                    <label for="email" class="block mb-2 text-sm font-medium text-black">Contact Number</label>
+                    <label for="phone" class="block mb-2 text-sm font-medium text-black">Contact Number</label>
                     <input type="tel" id="phone" name="phone" placeholder="9399XXXXXXX" class="border border-light/90 rounded-lg bg-white h-12 w-full px-4 py-4 focus:border-dark/50 outline-none focus-visible:outline-none focus-visible:shadow-none transition-all duration-300" required="" />
                   </div>
                   <div class="mb-6">
@@ -464,5 +464,6 @@
     <!-- start of script -->
     <script src="./plugins/aos/aos.js"></script>
     <script src="./scripts/main.js"></script>
+    <script src="./scripts/contact-form.js"></script>
   </body>
 </html>
