--- a/404.html
+++ b/404.html
@@ -9,11 +9,11 @@
     <meta name="description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     <meta property="og:title" content="404 - Page Not Found | Gaurava Yadav" />
     <meta property="og:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
-    <meta property="og:image" content="images/ogimage.png" />
+    <meta property="og:image" content="https://gauravayadav.com/images/ogimage.png" />
 
 
     <meta name="twitter:title" content="Gauarva - International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
-    <meta name="twitter:image" content="images/ogimage.png" />
+    <meta name="twitter:image" content="https://gauravayadav.com/images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     
