--- a/blog-quizzing.html
+++ b/blog-quizzing.html
@@ -9,12 +9,12 @@
     <meta name="description" content="How quizzing can transform learning and develop critical thinking skills in students" />
     <meta property="og:title" content="The Power of Quizzing in Education - Gaurava Yadav" />
     <meta property="og:description" content="How quizzing can transform learning and develop critical thinking skills in students" />
-    <meta property="og:image" content="./images/ogimage.png" />
+    <meta property="og:image" content="./https://gauravayadav.com/images/ogimage.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <meta name="twitter:title" content="The Power of Quizzing in Education - Gaurava Yadav" />
-    <meta name="twitter:image" content="./images/ogimage.png" />
+    <meta name="twitter:image" content="./https://gauravayadav.com/images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="How quizzing can transform learning and develop critical thinking skills in students" />
     
