--- a/platforms.html
+++ b/platforms.html
@@ -9,11 +9,11 @@
     <meta name="description" content="Explore Gaurava Yadav's educational initiatives and organizations transforming the education landscape." />
     <meta property="og:title" content="Platforms - Gaurava Yadav | International Award-Winning Entrepreneur" />
     <meta property="og:description" content="Explore Gaurava Yadav's educational initiatives and organizations transforming the education landscape." />
-    <meta property="og:image" content="images/ogimage.png" />
+    <meta property="og:image" content="https://gauravayadav.com/images/ogimage.png" />
 
 
     <meta name="twitter:title" content="Gauarva - International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
-    <meta name="twitter:image" content="images/ogimage.png" />
+    <meta name="twitter:image" content="https://gauravayadav.com/images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     
