--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <meta name="description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     <meta property="og:title" content="Gaurava Yadav - International Award-Winning Entrepreneur & Founder, IPN FORUM" />
     <meta property="og:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
-    <meta property="og:image" content="https://gauravayadav.com/https://gauravayadav.com/images/ogimage.png" />
+    <meta property="og:image" content="https://gauravayadav.com/images/ogimage.png" />
 
 
     <meta name="twitter:title" content="Gauarva - International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
-    <meta name="twitter:image" content="https://gauravayadav.com/https://gauravayadav.com/images/ogimage.png" />
+    <meta name="twitter:image" content="https://gauravayadav.com/images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
     
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://gauravayadav.com/images/favicon.png" type="image/x-icon" />
     
     <link rel="stylesheet" href="./plugins/aos/aos.css">
     <link rel="stylesheet" href="./styles/output.css">
